# unifi-pdf-llm

./: .gitattributes  .gitignore  .pre-commit-config  README.md  preprocess.py  pyproject.toml  rag.py  requirements.txt
azure_ai_doc_intelligence/: README.md  convert_all_reports.py  convert_report.py
azure_ai_doc_intelligence/outputs/: 2021ESG.json  2022-Absa-Group-limited-Environmental-Social-and-Governance-Data-sheet.json  Clicks-Sustainability-Report-2022.json  DISTELL ESG Appendix 2022.json  ESG-spreads.json  Oceana_ESG_Databook_FY2022.json  Oceana_Group_Sustainability_Report_2022.json  README.md  SASOL Sustainability Report 2023 20-09_0.json  UCT_Carbon_Footprint_Report_2020-2021.json  afs2021.json  picknpay-esg-report-spreads-2023.json  ssw-IR22.json
data/misc/: AMKEY_unit_conversion.csv
data/reports/: README.md
dev/: haystack_table_qa_markdown.ipynb  haystack_table_reading.ipynb  langchain_dev.ipynb  mapping.py  run_azure_converter.py  utils.py  validation.ipynb
esg_retriever/: README.md  __init__.py  config.py  load.py  mapping.py  preprocess.py  query.py  rag.py  utils.py
esg_retriever/dev/: convert_pdfs.py  mapping.py  utils.py  validate.py
esg_retriever/notebooks/: haystack_table_qa_embedding.ipynb  haystack_table_qa_markdown.ipynb  haystack_table_reading.ipynb  langchain_exp.ipynb  openai_api_exp.ipynb  validation.ipynb
esg_retriever/rag/: load.py  prompts.py  rag.py
notebooks/: langchain_exp.ipynb
submission/: make_submission.py  submission.csv
validation/: validate.py
